updated clients rest api path call to api gateway
